--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 
 # Ignore application configuration
 /config/application.yml
+
+# ignore files uploaded on localhost (makes sure that any images that are uploaded on localhost are not uploaded onto github)
+/public/system
